--- a/static/css/custom_style.css
+++ b/static/css/custom_style.css
@@ -34,8 +34,8 @@
     border-radius: 50%;
     top: 0px;
     left: 0px;
-    width: 240px;
-    height: 240px;
+    width: 5em;
+    height: 5em;
     animation: spin 2s linear infinite;
     align-content: center;
   }
