--- a/templates/catalogue.jinja2
+++ b/templates/catalogue.jinja2
@@ -20,7 +20,7 @@
                             <div class="d-flex justify-content-end">
                                 <div class="btn-group">
                                     <a class="btn btn-sm btn-outline-secondary"
-                                       href="{{ url_for('application', app_name=app.name) }}">Go</a>
+                                       href="{{ url_for('application', app_name=app.name, template=app.template) }}">Go</a>
                                 </div>
                             </div>
                         </div>
