Added support for applications hosted at https://huggingface.co/
Instead of the built-in viewers, the applications hosted in HF will be shown instead.

In the catalogue.yaml file, the attribute 'huggingface' must be set to the page of the application: https://<user>-<application name>.hf.space
See livermask as an example.

--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -21,6 +21,9 @@
 
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/e3a5ec69a5.js" crossorigin="anonymous"></script>
+
+    <!-- Gradio for Hugging face embeddings -->
+      <script type="module" src="https://gradio.s3-us-west-2.amazonaws.com/3.32.0/gradio.js"></script>
   </head>
   <body class="bg-light">
 
@@ -35,7 +38,7 @@
       </nav>
     </header>
 
-    <main class="mt-5 mb-5">
+    <main class="mt-5 mb-5" overflow-x="hidden">
         {% block content %}
         {% endblock %}
     </main>
